# blog-api

./: Cargo.toml
src/: auth.rs  main.rs  routes.rs
src/db/: mod.rs  models.rs  schema.rs
static/: fast.html
