[package]
name = "blog-api"
version = "0.1.0"
authors = ["Kent Daleng <kent.stefan.daleng@nav.no>"]
edition = "2018"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
log = "0.4"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

diesel = { version = "^1.1.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.10"